--- a/app/components/MainFormComponent/TimeLineComponent/TimeLineComponent.scss
+++ b/app/components/MainFormComponent/TimeLineComponent/TimeLineComponent.scss
@@ -42,6 +42,7 @@ $arrowWidth: 16px;
     flex-direction: column;
     align-items: center;
     bottom: 0px;
+    width: 3px;
     & .line {
         position: relative;
         width: 3px;
