--- a/app/components/MainFormComponent/ValveLineComponent/ValveLineComponent.scss
+++ b/app/components/MainFormComponent/ValveLineComponent/ValveLineComponent.scss
@@ -9,8 +9,32 @@
   margin-top: $ValveLineMargin;
   align-items: center;
   & .time-box {
-    position: relative;
-    top: 25%;
-    height: 50%;
+    // position: relative;
+    // top: 25%;
+    height: 90%;
   }
+}
+
+.timeFormer{
+  height: 100%;
+  // background-color: rgba(171, 193, 197, 0.55);
+  background: radial-gradient(
+    closest-side,
+    rgba(171, 193, 197, 0.8) 80%,
+    rgba(171, 193, 197, 1)
+  );
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.timeFormer_sign{
+  color: #81acbc;
+  font-size: 2rem;
+  font-weight: 700;
+}
+.gap{
+  height: 100%;
+  display: inline-block;
 }
